# nymdex

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: application.rs  logger.rs  main.rs  producer.rs
src/producer/: amqp.rs  kafka.rs  mod.rs
