[package]
name = "nymdex"
version = "0.0.1"
authors = ["Zack Kollar <rallokkcaz@gmail.com>"]
edition = "2018"

[dependencies]
near-indexer = { git = "https://github.com/nearprotocol/nearcore" }
actix = "0.11.0-beta.2"
log = "0.4.14"
openssl-probe = "0.1.2"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
actix-rt = "2.2.0"
kafka = "0.8.0"
async-trait = "0.1.48"

[package.metadata.precommit]
fmt = "cargo fmt -- --write-mode diff 2>&1"
test = "cargo test 2>&1"